--- a/p5/game/style.css
+++ b/p5/game/style.css
@@ -1,4 +1,4 @@
-canvas {
+/* canvas {
     padding: 0;
     margin: auto;
     display: block;
@@ -9,4 +9,4 @@ canvas {
     bottom: 0;
     left: 0;
     right: 0;
-}
+} */
