--- a/p5/game/style.css
+++ b/p5/game/style.css
@@ -11,8 +11,26 @@
     right: 0;
 } */
 
+canvas {
+    z-index: 100;
+}
+
+* 
+{
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    width: 430px;
+    height: 300px;
+}
+
+
 body {
     overflow: hidden;
+    position: relative;
     background-color: black;
 }
 
@@ -22,3 +40,155 @@ video {
     position: absolute;
     top: 0.6%;
 }
+
+.noise {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 430px;
+    height: 300px;
+    overflow: hidden;
+    z-index: 400;
+    opacity: 0.8;
+    pointer-events: none;
+    opacity: 1;
+    z-index: 450;
+}
+
+.noise::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	pointer-events: none;
+	animation: noise 1s infinite alternate;
+}
+
+.lines {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 430px;
+    height: 300px;
+    pointer-events: none;
+    z-index: 300;
+    opacity: 1;
+    will-change: opacity;
+    animation: opacity 3s linear infinite;
+}
+
+img {
+    width: auto;
+    height: auto;
+    /* pointer-events: none; */
+    z-index: 500;
+    opacity: 1;
+    will-change: opacity;
+    animation: opacity 3s linear infinite;
+}
+
+.lines::before{
+    content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	pointer-events: none;
+	background: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, .5) 51%);
+	background-size: 100% 4px;
+}
+
+.main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-family: 'VT323';
+    color: #fff;
+    font-size: 2rem;
+    width: 430px;
+    height: 300px;
+}
+
+.main .noise::before{
+    background-size: 150%;
+}
+
+.main .vhs {
+    position: absolute;
+    left: 2rem;
+    top: 2rem;
+    will-change: text-shadow;
+    animation: rgbText 2s steps(9) 0s infinite alternate;
+}
+
+.main .vhs .char {
+	will-change: opacity;
+	animation: type 1.2s infinite alternate;
+	animation-delay: calc(60ms * var(--char-index));
+}
+
+.main .time {
+    font-size: 25px;
+	position: absolute;
+	right: 2rem;
+	top: 1rem;
+	will-change: text-shadow;
+	animation: rgbText 1s steps(9) 0s infinite alternate;
+}
+
+.main .counter {
+    font-size: 25px;
+	position: absolute;
+	left: 2rem;
+	bottom: 1rem;
+	will-change: text-shadow;
+	animation: rgbText 1s steps(9) 0s infinite alternate;
+}
+
+
+@keyframes opacity {
+	0% {
+		opacity: 0.6;
+	}
+	20% {
+		opacity: 0.3;
+	}
+	35% {
+		opacity: 0.5;
+	}
+	50% {
+		opacity: 0.8;
+	}
+	60% {
+		opacity: 0.4;
+	}
+	80% {
+		opacity: 0.7;
+	}
+	100% {
+		opacity: 0.6;
+	}
+}
+
+@keyframes scanlines {
+    from {
+      background: linear-gradient(
+        to bottom,
+        transparent 50%,
+        rgba(231, 231, 231, 0.5) 51%,
+      );
+      background-size: 100% 4px;
+    }
+    to {
+      background: linear-gradient(
+        to bottom,
+        rgba(231, 231, 231, 0.5) 50%,
+        transparent 51%
+      );
+      background-size: 100% 4px;
+    }
+  }
+
