--- a/p5/game/style.css
+++ b/p5/game/style.css
@@ -35,10 +35,11 @@ body {
 }
 
 video {
-    width: 100%;
-    height: auto;
+    /* width: 100%;
+    height: auto; */
     position: absolute;
-    top: 0.6%;
+    top: 0;
+    left: 0;
 }
 
 .noise {
